--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web developer portfolio</title>
+    <title>developer portfolio</title>
 </head>
 <body>
-    <header>
-
-    </header>
-    <min>
-
-    </min>
-    <footer>
-        
-    </footer>
     
 </body>
 </html>
