--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
+    <nav>
+    </nav>
+    <div class="banner">
+        <h3 class="banner-greeting">Hi, I am</h3>
+        <h1 class="banner-title">Mary Hardy</h1>
+        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+        
+    </div>
     <header>
+
         <nav>
             <h3 class="nav-title">ma<span class="text-primary">r</span>y</h3>
             <ul>
