--- a/index.html
+++ b/index.html
@@ -178,7 +178,13 @@
             </div>
         </div>
         <div class="footer-column">
-            <div class="section-title">Let’s Message me</div>
+            <h3 class="section-title">Let’s Message me</h3> 
+            <form class="contact" action="">
+                <input type="text" placeholder="your Name">
+                <input type="email" name="" placeholder="your Email" id="">
+                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
         </div>
     </footer>
 
