--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <form class="contact" action="">
                 <input type="text" placeholder="your Name">
                 <input type="email" name="" placeholder="your Email" id="">
-                <textarea name="" id="" cols="30" rows="10"></textarea>
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
                 <input class="btn-primary" type="submit" value="Submit">
             </form>
         </div>
